.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-7764e3e        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava
:compileApiJavaF:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\item\ItemBackpack.java:62: error: cannot find symbol
		setTranslationKey("wearablebackpacks.backpack");
		^
  symbol:   method setTranslationKey(String)
  location: class ItemBackpack
F:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\block\BlockBackpack.java:49: error: method does not override or implement a method from a supertype
	@Override
	^
F:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\block\BlockBackpack.java:52: error: cannot find symbol
		return MiscUtils.getItemFromBlock(this).getTranslationKey();
		                                       ^
  symbol:   method getTranslationKey()
  location: class Item
F:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\block\BlockBackpack.java:94: error: cannot find symbol
			EnumFacing facing = EnumFacing.byIndex(i + 2);
			                              ^
  symbol:   method byIndex(int)
  location: class EnumFacing
F:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\block\entity\TileEntityBackpack.java:89: error: cannot find symbol
		facing = EnumFacing.byIndex(NbtUtils.get(compound, (byte)0, TAG_FACING) + 2);
		                   ^
  symbol:   method byIndex(int)
  location: class EnumFacing
F:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\misc\util\NbtUtils.java:141: error: cannot find symbol
		if (compound.isEmpty())
		            ^
  symbol:   method isEmpty()
  location: variable compound of type NBTTagCompound
F:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\misc\util\NbtUtils.java:157: error: cannot find symbol
			if (!subCompound.isEmpty()) return;
			                ^
  symbol:   method isEmpty()
  location: variable subCompound of type NBTTagCompound
F:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\misc\util\NbtUtils.java:223: error: cannot find symbol
		return ((compound != null) && !compound.isEmpty())
		                                       ^
  symbol:   method isEmpty()
  location: variable compound of type NBTTagCompound
F:\Minecraft Forge\Projects\1.12.2\Heavy Inventories\build\sources\api\java\net\mcft\copy\backpacks\client\gui\GuiEntityRender.java:211: error: method does not override or implement a method from a supertype
		@Override public Chunk getChunk(int chunkX, int chunkZ) { return null; }
		^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileApiJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 15.951 secs
